loading adventures as jars works somehow. i need a break